// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the players list filters with alternate filters 1`] = `
<div
  className="players-list-filters"
>
  <h2>
    Filter Players
  </h2>
  <div
    className="filter-group"
  >
    <label>
      Search For:
    </label>
    <br />
    <input
      onChange={[Function]}
      type="text"
      value="Sidney"
    />
  </div>
  <div
    className="filter-group"
  >
    <label>
      Sort By:
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="name"
      >
        Name
      </option>
      <option
        value="skill_level"
      >
        Skill Level
      </option>
    </select>
  </div>
  <div
    className="filter-group"
  >
    <label>
      Sport Type:
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="all"
      >
        All
      </option>
      <option
        value="hockey"
      >
        Hockey
      </option>
      <option
        value="baseball"
      >
        Baseball
      </option>
      <option
        value="softball"
      >
        Softball
      </option>
      <option
        value="basketball"
      >
        Basketball
      </option>
    </select>
  </div>
</div>
`;

exports[`should render the players list filters with default values 1`] = `
<div
  className="players-list-filters"
>
  <h2>
    Filter Players
  </h2>
  <div
    className="filter-group"
  >
    <label>
      Search For:
    </label>
    <br />
    <input
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="filter-group"
  >
    <label>
      Sort By:
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="name"
      >
        Name
      </option>
      <option
        value="skill_level"
      >
        Skill Level
      </option>
    </select>
  </div>
  <div
    className="filter-group"
  >
    <label>
      Sport Type:
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="all"
      >
        All
      </option>
      <option
        value="hockey"
      >
        Hockey
      </option>
      <option
        value="baseball"
      >
        Baseball
      </option>
      <option
        value="softball"
      >
        Softball
      </option>
      <option
        value="basketball"
      >
        Basketball
      </option>
    </select>
  </div>
</div>
`;
